# backend_lab_3

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yaml
.cargo/: config.toml
entity/: Cargo.toml
entity/src/entities/: category.rs  mod.rs  prelude.rs  record.rs  user.rs
migration/src/: lib.rs  m20251026_160714_create_users_table.rs  m20251026_233421_create_categories_table.rs  m20251027_010727_create_records_table.rs
src/: categories.rs  database.rs  error.rs  health.rs  main.rs  records.rs  users.rs
src/routers/: categories.rs  mod.rs  records.rs  users.rs
