[package]
name = "backend_lab_2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["query"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
