[package]
name = "backend_lab_3"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "migration"]

[dependencies]
axum = { version = "0.8.6", features = ["query"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rust_decimal = "1.39.0"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
